// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentityCredentials should expand last credential when there are less than 7 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Your Credentials
    </h1>
    <p
      class="subline"
    >
      View and manage your credentials
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <ul
      class="credentials"
    >
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Sporran email
            </h4>
            <p
              class="collapsedValue"
            >
              sporran@sporran.org
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Alter Ego Email
            </h4>
            <p
              class="collapsedValue"
            >
              badboy69@hotmail.com
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="true"
        class="credential"
      >
        <section
          class="expanded"
        >
          <section
            class="buttons"
          >
            <button
              aria-label="Collapse credential details"
              class="collapse"
              type="button"
            />
            <a
              aria-label="Back up credential"
              class="download"
              download="Email Credential-Email.json"
              href="data:text/json;base64,eyJyZXF1ZXN0Ijp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayIsIk5hbWUiOiJNb2NrIE5hbWUifSwib3duZXIiOiJkaWQ6a2lsdDpsaWdodDowMDRxZTV0SmdvQmUySko3ZWpWVkdCemtUeGpqUjRuUENHZzdRNG5rWkxxZEhvN3NQUiJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweGJlN2ZjYzdhYTAxODZiMDVmZDExNmMxMDBlMmQ2NzNmYjk1MTE2MzY5Mzc4ODY0MGNlNjAzMmFkMmY3MDBkYWUifSwibmFtZSI6IkVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOnRydWV9"
            />
            <button
              aria-label="Remove credential"
              class="remove"
              type="button"
            />
          </section>
          <dl
            class="details"
          >
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Credential name
              </dt>
              <dd
                class="nameValue"
              >
                Email Credential
                <button
                  aria-label="Edit credential name"
                  class="editName"
                />
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Status
              </dt>
              <dd
                class="detailValue"
              >
                Attested
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Email
              </dt>
              <dd
                class="detailValue"
              >
                mockEmail@mock.mock
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Name
              </dt>
              <dd
                class="detailValue"
              >
                Mock Name
              </dd>
            </div>
          </dl>
          <h4
            class="technical"
          >
            Technical details
          </h4>
          <dl
            class="details"
          >
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                CType
              </dt>
              <dd
                class="detailValue"
              >
                Email
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Attester
              </dt>
              <dd
                class="detailValue"
              >
                Trusted Entity attester
              </dd>
            </div>
            <div
              class="hash"
            >
              <dt
                class="detailName"
              >
                Credential hash
              </dt>
              <dd
                class="detailValue"
              >
                0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
              </dd>
            </div>
          </dl>
        </section>
        <div />
      </li>
    </ul>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`IdentityCredentials should not render credentials for new identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/add"
          title="Add Identity"
        />
      </section>
      <a
        aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
        class="left"
        href="/"
        title="KILT Identity 3 which has a very long name and might not even fit on the screen"
      />
      <a
        aria-label="KILT Identity 1"
        class="right"
        href="/"
        title="KILT Identity 1"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <a
      class="add"
      href="/identity/add"
    >
      Add Identity
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityCredentials should render 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Your Credentials
    </h1>
    <p
      class="subline"
    >
      View and manage your credentials
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <ul
      class="credentials"
    >
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              GitHub 9
            </h4>
            <p
              class="collapsedValue"
            >
              arty-name
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Email Credential
            </h4>
            <p
              class="collapsedValue"
            >
              mockEmail@mock.mock
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Sporran email
            </h4>
            <p
              class="collapsedValue"
            >
              sporran@sporran.org
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Lots of props
            </h4>
            <p
              class="collapsedValue"
            >
              Proppy
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              All your stakes are belong to us
            </h4>
            <p
              class="collapsedValue"
            >
              This is a really long name for the first property of claim contents to check how the overflow looks
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Dotsama Credential
            </h4>
            <p
              class="collapsedValue"
            >
              God collator
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Believe me
            </h4>
            <p
              class="collapsedValue"
            >
              realDonaldTrump
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Tweet Twit Twat
            </h4>
            <p
              class="collapsedValue"
            >
              tweety_bird
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Mein Credential
            </h4>
            <p
              class="collapsedValue"
            >
              maxmustermann@gmx-123-z34-dfdsafsdf-42r421-2sdfag.de
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              A really long name for my credential which probably will not fit on the screen
            </h4>
            <p
              class="collapsedValue"
            >
              loremipsum@gmail.com
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Sporran email
            </h4>
            <p
              class="collapsedValue"
            >
              sporran@sporran.org
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Alter Ego Email
            </h4>
            <p
              class="collapsedValue"
            >
              badboy69@hotmail.com
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Email Credential
            </h4>
            <p
              class="collapsedValue"
            >
              mockEmail@mock.mock
            </p>
          </section>
        </button>
        <div />
      </li>
    </ul>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`IdentityCredentials should render when no credentials 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Your Credentials
    </h1>
    <p
      class="subline"
    >
      View and manage your credentials
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <section
      class="credentials"
    >
      <p
        class="info"
      >
        No credentials available
      </p>
      <a
        class="explainerLink"
        href="https://socialkyc.io/"
        rel="noreferrer"
        target="_blank"
      >
        Get Credentials
      </a>
    </section>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
